gen/MySQLParser.py
# Generated from /Users/richwandell/PycharmProjects/mysql-to-rabbit.py/MySQLParser.g4 by ANTLR 4.5.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class MySQLParser ( Parser ):

    grammarFileName = "MySQLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'select'", u"'insert into'", u"'from'", 
                     u"'where'", u"<INVALID>", u"<INVALID>", u"'xor'", u"'is'", 
                     u"'null'", u"'like'", u"'in'", u"'exists'", u"'all'", 
                     u"'any'", u"'true'", u"'false'", u"<INVALID>", u"<INVALID>", 
                     u"'between'", u"'regexp'", u"'+'", u"'-'", u"'~'", 
                     u"'|'", u"'&'", u"'^'", u"'binary'", u"'<<'", u"'>>'", 
                     u"'escape'", u"'*'", u"')'", u"'('", u"']'", u"'['", 
                     u"':'", u"'.*'", u"'='", u"'<'", u"'>'", u"'!='", u"'not'", 
                     u"'<='", u"'>='", u"';'", u"','", u"'.'", u"'collate'", 
                     u"'inner'", u"'outer'", u"'join'", u"'cross'", u"'using'", 
                     u"'index'", u"'key'", u"'order'", u"'group'", u"'by'", 
                     u"'for'", u"'use'", u"'ignore'", u"'partition'", u"'straight_join'", 
                     u"'natural'", u"'left'", u"'right'", u"'oj'", u"'on'", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"'`'", u"'''" ]

    symbolicNames = [ u"<INVALID>", u"SELECT", u"INSERT", u"FROM", u"WHERE", 
                      u"AND", u"OR", u"XOR", u"IS", u"NULL", u"LIKE", u"IN", 
                      u"EXISTS", u"ALL", u"ANY", u"TRUE", u"FALSE", u"DIVIDE", 
                      u"MOD", u"BETWEEN", u"REGEXP", u"PLUS", u"MINUS", 
                      u"NEGATION", u"VERTBAR", u"BITAND", u"POWER_OP", u"BINARY", 
                      u"SHIFT_LEFT", u"SHIFT_RIGHT", u"ESCAPE", u"ASTERISK", 
                      u"RPAREN", u"LPAREN", u"RBRACK", u"LBRACK", u"COLON", 
                      u"ALL_FIELDS", u"EQ", u"LTH", u"GTH", u"NOT_EQ", u"NOT", 
                      u"LET", u"GET", u"SEMI", u"COMMA", u"DOT", u"COLLATE", 
                      u"INNER", u"OUTER", u"JOIN", u"CROSS", u"USING", u"INDEX", 
                      u"KEY", u"ORDER", u"GROUP", u"BY", u"FOR", u"USE", 
                      u"IGNORE", u"PARTITION", u"STRAIGHT_JOIN", u"NATURAL", 
                      u"LEFT", u"RIGHT", u"OJ", u"ON", u"ID", u"INT", u"NEWLINE", 
                      u"WS", u"USER_VAR", u"TILDE", u"SINGLE_QUOTE" ]

    RULE_stat = 0
    RULE_schema_name = 1
    RULE_select_clause = 2
    RULE_insert_stm = 3
    RULE_table_name = 4
    RULE_table_alias = 5
    RULE_column_name = 6
    RULE_column_name_alias = 7
    RULE_index_name = 8
    RULE_column_list = 9
    RULE_column_list_clause = 10
    RULE_from_clause = 11
    RULE_select_key = 12
    RULE_where_clause = 13
    RULE_expression = 14
    RULE_element = 15
    RULE_right_element = 16
    RULE_left_element = 17
    RULE_target_element = 18
    RULE_relational_op = 19
    RULE_expr_op = 20
    RULE_between_op = 21
    RULE_is_or_is_not = 22
    RULE_simple_expression = 23
    RULE_table_references = 24
    RULE_table_reference = 25
    RULE_table_factor1 = 26
    RULE_table_factor2 = 27
    RULE_table_factor3 = 28
    RULE_table_factor4 = 29
    RULE_table_atom = 30
    RULE_join_clause = 31
    RULE_join_condition = 32
    RULE_index_hint_list = 33
    RULE_index_options = 34
    RULE_index_hint = 35
    RULE_index_list = 36
    RULE_partition_clause = 37
    RULE_partition_names = 38
    RULE_partition_name = 39
    RULE_subquery_alias = 40
    RULE_subquery = 41

    ruleNames =  [ u"stat", u"schema_name", u"select_clause", u"insert_stm", 
                   u"table_name", u"table_alias", u"column_name", u"column_name_alias", 
                   u"index_name", u"column_list", u"column_list_clause", 
                   u"from_clause", u"select_key", u"where_clause", u"expression", 
                   u"element", u"right_element", u"left_element", u"target_element", 
                   u"relational_op", u"expr_op", u"between_op", u"is_or_is_not", 
                   u"simple_expression", u"table_references", u"table_reference", 
                   u"table_factor1", u"table_factor2", u"table_factor3", 
                   u"table_factor4", u"table_atom", u"join_clause", u"join_condition", 
                   u"index_hint_list", u"index_options", u"index_hint", 
                   u"index_list", u"partition_clause", u"partition_names", 
                   u"partition_name", u"subquery_alias", u"subquery" ]

    EOF = Token.EOF
    SELECT=1
    INSERT=2
    FROM=3
    WHERE=4
    AND=5
    OR=6
    XOR=7
    IS=8
    NULL=9
    LIKE=10
    IN=11
    EXISTS=12
    ALL=13
    ANY=14
    TRUE=15
    FALSE=16
    DIVIDE=17
    MOD=18
    BETWEEN=19
    REGEXP=20
    PLUS=21
    MINUS=22
    NEGATION=23
    VERTBAR=24
    BITAND=25
    POWER_OP=26
    BINARY=27
    SHIFT_LEFT=28
    SHIFT_RIGHT=29
    ESCAPE=30
    ASTERISK=31
    RPAREN=32
    LPAREN=33
    RBRACK=34
    LBRACK=35
    COLON=36
    ALL_FIELDS=37
    EQ=38
    LTH=39
    GTH=40
    NOT_EQ=41
    NOT=42
    LET=43
    GET=44
    SEMI=45
    COMMA=46
    DOT=47
    COLLATE=48
    INNER=49
    OUTER=50
    JOIN=51
    CROSS=52
    USING=53
    INDEX=54
    KEY=55
    ORDER=56
    GROUP=57
    BY=58
    FOR=59
    USE=60
    IGNORE=61
    PARTITION=62
    STRAIGHT_JOIN=63
    NATURAL=64
    LEFT=65
    RIGHT=66
    OJ=67
    ON=68
    ID=69
    INT=70
    NEWLINE=71
    WS=72
    USER_VAR=73
    TILDE=74
    SINGLE_QUOTE=75

    def __init__(self, input):
        super(MySQLParser, self).__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MySQLParser.StatContext, self).__init__(parent, invokingState)
            self.parser = parser

        def select_clause(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MySQLParser.Select_clauseContext)
            else:
                return self.getTypedRuleContext(MySQLParser.Select_clauseContext,i)


        def getRuleIndex(self):
            return MySQLParser.RULE_stat

        def enterRule(self, listener):
            if hasattr(listener, "enterStat"):
                listener.enterStat(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStat"):
                listener.exitStat(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitStat"):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = MySQLParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 84
                self.select_clause()
                self.state = 87 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MySQLParser.SELECT):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Schema_nameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MySQLParser.Schema_nameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MySQLParser.ID, 0)

        def getRuleIndex(self):
            return MySQLParser.RULE_schema_name

        def enterRule(self, listener):
            if hasattr(listener, "enterSchema_name"):
                listener.enterSchema_name(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSchema_name"):
                listener.exitSchema_name(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitSchema_name"):
                return visitor.visitSchema_name(self)
            else:
                return visitor.visitChildren(self)




    def schema_name(self):

        localctx = MySQLParser.Schema_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_schema_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(MySQLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Select_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MySQLParser.Select_clauseContext, self).__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(MySQLParser.SELECT, 0)

        def column_list_clause(self):
            return self.getTypedRuleContext(MySQLParser.Column_list_clauseContext,0)


        def FROM(self):
            return self.getToken(MySQLParser.FROM, 0)

        def table_references(self):
            return self.getTypedRuleContext(MySQLParser.Table_referencesContext,0)


        def where_clause(self):
            return self.getTypedRuleContext(MySQLParser.Where_clauseContext,0)


        def getRuleIndex(self):
            return MySQLParser.RULE_select_clause

        def enterRule(self, listener):
            if hasattr(listener, "enterSelect_clause"):
                listener.enterSelect_clause(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSelect_clause"):
                listener.exitSelect_clause(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitSelect_clause"):
                return visitor.visitSelect_clause(self)
            else:
                return visitor.visitChildren(self)




    def select_clause(self):

        localctx = MySQLParser.Select_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_select_clause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(MySQLParser.SELECT)
            self.state = 92
            self.column_list_clause()
            self.state = 95
            _la = self._input.LA(1)
            if _la==MySQLParser.FROM:
                self.state = 93
                self.match(MySQLParser.FROM)
                self.state = 94
                self.table_references()


            self.state = 98
            _la = self._input.LA(1)
            if _la==MySQLParser.WHERE:
                self.state = 97
                self.where_clause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Insert_stmContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MySQLParser.Insert_stmContext, self).__init__(parent, invokingState)
            self.parser = parser

        def INSERT(self):
            return self.getToken(MySQLParser.INSERT, 0)

        def table_reference(self):
            return self.getTypedRuleContext(MySQLParser.Table_referenceContext,0)


        def getRuleIndex(self):
            return MySQLParser.RULE_insert_stm

        def enterRule(self, listener):
            if hasattr(listener, "enterInsert_stm"):
                listener.enterInsert_stm(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitInsert_stm"):
                listener.exitInsert_stm(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitInsert_stm"):
                return visitor.visitInsert_stm(self)
            else:
                return visitor.visitChildren(self)




    def insert_stm(self):

        localctx = MySQLParser.Insert_stmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_insert_stm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(MySQLParser.INSERT)
            self.state = 101
            self.table_reference()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Table_nameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MySQLParser.Table_nameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MySQLParser.ID, 0)

        def getRuleIndex(self):
            return MySQLParser.RULE_table_name

        def enterRule(self, listener):
            if hasattr(listener, "enterTable_name"):
                listener.enterTable_name(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitTable_name"):
                listener.exitTable_name(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitTable_name"):
                return visitor.visitTable_name(self)
            else:
                return visitor.visitChildren(self)




    def table_name(self):

        localctx = MySQLParser.Table_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_table_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(MySQLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Table_aliasContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MySQLParser.Table_aliasContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MySQLParser.ID, 0)

        def getRuleIndex(self):
            return MySQLParser.RULE_table_alias

        def enterRule(self, listener):
            if hasattr(listener, "enterTable_alias"):
                listener.enterTable_alias(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitTable_alias"):
                listener.exitTable_alias(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitTable_alias"):
                return visitor.visitTable_alias(self)
            else:
                return visitor.visitChildren(self)




    def table_alias(self):

        localctx = MySQLParser.Table_aliasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_table_alias)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(MySQLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Column_nameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MySQLParser.Column_nameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i=None):
            if i is None:
                return self.getTokens(MySQLParser.ID)
            else:
                return self.getToken(MySQLParser.ID, i)

        def DOT(self, i=None):
            if i is None:
                return self.getTokens(MySQLParser.DOT)
            else:
                return self.getToken(MySQLParser.DOT, i)

        def column_name_alias(self):
            return self.getTypedRuleContext(MySQLParser.Column_name_aliasContext,0)


        def schema_name(self):
            return self.getTypedRuleContext(MySQLParser.Schema_nameContext,0)


        def table_alias(self):
            return self.getTypedRuleContext(MySQLParser.Table_aliasContext,0)


        def USER_VAR(self):
            return self.getToken(MySQLParser.USER_VAR, 0)

        def getRuleIndex(self):
            return MySQLParser.RULE_column_name

        def enterRule(self, listener):
            if hasattr(listener, "enterColumn_name"):
                listener.enterColumn_name(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitColumn_name"):
                listener.exitColumn_name(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitColumn_name"):
                return visitor.visitColumn_name(self)
            else:
                return visitor.visitChildren(self)




    def column_name(self):

        localctx = MySQLParser.Column_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_column_name)
        self._la = 0 # Token type
        try:
            self.state = 130
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 110
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        self.state = 107
                        self.schema_name()
                        self.state = 108
                        self.match(MySQLParser.DOT)


                    self.state = 112
                    self.match(MySQLParser.ID)
                    self.state = 113
                    self.match(MySQLParser.DOT)


                self.state = 116
                self.match(MySQLParser.ID)
                self.state = 118
                _la = self._input.LA(1)
                if _la==MySQLParser.ID:
                    self.state = 117
                    self.column_name_alias()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 120
                    self.table_alias()
                    self.state = 121
                    self.match(MySQLParser.DOT)


                self.state = 125
                self.match(MySQLParser.ID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.match(MySQLParser.USER_VAR)
                self.state = 128
                _la = self._input.LA(1)
                if _la==MySQLParser.ID:
                    self.state = 127
                    self.column_name_alias()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Column_name_aliasContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MySQLParser.Column_name_aliasContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MySQLParser.ID, 0)

        def getRuleIndex(self):
            return MySQLParser.RULE_column_name_alias

        def enterRule(self, listener):
            if hasattr(listener, "enterColumn_name_alias"):
                listener.enterColumn_name_alias(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitColumn_name_alias"):
                listener.exitColumn_name_alias(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitColumn_name_alias"):
                return visitor.visitColumn_name_alias(self)
            else:
                return visitor.visitChildren(self)




    def column_name_alias(self):

        localctx = MySQLParser.Column_name_aliasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_column_name_alias)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(MySQLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Index_nameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MySQLParser.Index_nameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MySQLParser.ID, 0)

        def getRuleIndex(self):
            return MySQLParser.RULE_index_name

        def enterRule(self, listener):
            if hasattr(listener, "enterIndex_name"):
                listener.enterIndex_name(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitIndex_name"):
                listener.exitIndex_name(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitIndex_name"):
                return visitor.visitIndex_name(self)
            else:
                return visitor.visitChildren(self)




    def index_name(self):

        localctx = MySQLParser.Index_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_index_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(MySQLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Column_listContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MySQLParser.Column_listContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(MySQLParser.LPAREN, 0)

        def column_name(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MySQLParser.Column_nameContext)
            else:
                return self.getTypedRuleContext(MySQLParser.Column_nameContext,i)


        def RPAREN(self):
            return self.getToken(MySQLParser.RPAREN, 0)

        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(MySQLParser.COMMA)
            else:
                return self.getToken(MySQLParser.COMMA, i)

        def getRuleIndex(self):
            return MySQLParser.RULE_column_list

        def enterRule(self, listener):
            if hasattr(listener, "enterColumn_list"):
                listener.enterColumn_list(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitColumn_list"):
                listener.exitColumn_list(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitColumn_list"):
                return visitor.visitColumn_list(self)
            else:
                return visitor.visitChildren(self)




    def column_list(self):

        localctx = MySQLParser.Column_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_column_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(MySQLParser.LPAREN)
            self.state = 137
            self.column_name()
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MySQLParser.COMMA:
                self.state = 138
                self.match(MySQLParser.COMMA)
                self.state = 139
                self.column_name()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 145
            self.match(MySQLParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Column_list_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MySQLParser.Column_list_clauseContext, self).__init__(parent, invokingState)
            self.parser = parser

        def column_name(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MySQLParser.Column_nameContext)
            else:
                return self.getTypedRuleContext(MySQLParser.Column_nameContext,i)


        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(MySQLParser.COMMA)
            else:
                return self.getToken(MySQLParser.COMMA, i)

        def getRuleIndex(self):
            return MySQLParser.RULE_column_list_clause

        def enterRule(self, listener):
            if hasattr(listener, "enterColumn_list_clause"):
                listener.enterColumn_list_clause(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitColumn_list_clause"):
                listener.exitColumn_list_clause(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitColumn_list_clause"):
                return visitor.visitColumn_list_clause(self)
            else:
                return visitor.visitChildren(self)




    def column_list_clause(self):

        localctx = MySQLParser.Column_list_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_column_list_clause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.column_name()
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MySQLParser.COMMA:
                self.state = 148
                self.match(MySQLParser.COMMA)
                self.state = 149
                self.column_name()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class From_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MySQLParser.From_clauseContext, self).__init__(parent, invokingState)
            self.parser = parser

        def FROM(self):
            return self.getToken(MySQLParser.FROM, 0)

        def table_name(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MySQLParser.Table_nameContext)
            else:
                return self.getTypedRuleContext(MySQLParser.Table_nameContext,i)


        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(MySQLParser.COMMA)
            else:
                return self.getToken(MySQLParser.COMMA, i)

        def getRuleIndex(self):
            return MySQLParser.RULE_from_clause

        def enterRule(self, listener):
            if hasattr(listener, "enterFrom_clause"):
                listener.enterFrom_clause(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitFrom_clause"):
                listener.exitFrom_clause(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitFrom_clause"):
                return visitor.visitFrom_clause(self)
            else:
                return visitor.visitChildren(self)




    def from_clause(self):

        localctx = MySQLParser.From_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_from_clause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(MySQLParser.FROM)
            self.state = 156
            self.table_name()
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MySQLParser.COMMA:
                self.state = 157
                self.match(MySQLParser.COMMA)
                self.state = 158
                self.table_name()
                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Select_keyContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MySQLParser.Select_keyContext, self).__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(MySQLParser.SELECT, 0)

        def getRuleIndex(self):
            return MySQLParser.RULE_select_key

        def enterRule(self, listener):
            if hasattr(listener, "enterSelect_key"):
                listener.enterSelect_key(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSelect_key"):
                listener.exitSelect_key(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitSelect_key"):
                return visitor.visitSelect_key(self)
            else:
                return visitor.visitChildren(self)




    def select_key(self):

        localctx = MySQLParser.Select_keyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_select_key)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(MySQLParser.SELECT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Where_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MySQLParser.Where_clauseContext, self).__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(MySQLParser.WHERE, 0)

        def expression(self):
            return self.getTypedRuleContext(MySQLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MySQLParser.RULE_where_clause

        def enterRule(self, listener):
            if hasattr(listener, "enterWhere_clause"):
                listener.enterWhere_clause(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitWhere_clause"):
                listener.exitWhere_clause(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitWhere_clause"):
                return visitor.visitWhere_clause(self)
            else:
                return visitor.visitChildren(self)




    def where_clause(self):

        localctx = MySQLParser.Where_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_where_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(MySQLParser.WHERE)
            self.state = 167
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MySQLParser.ExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def simple_expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MySQLParser.Simple_expressionContext)
            else:
                return self.getTypedRuleContext(MySQLParser.Simple_expressionContext,i)


        def expr_op(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MySQLParser.Expr_opContext)
            else:
                return self.getTypedRuleContext(MySQLParser.Expr_opContext,i)


        def getRuleIndex(self):
            return MySQLParser.RULE_expression

        def enterRule(self, listener):
            if hasattr(listener, "enterExpression"):
                listener.enterExpression(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitExpression"):
                listener.exitExpression(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitExpression"):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):
